# chat-rail

./: .dockerignore  .env.example  .gitignore  .vercelignore  Dockerfile.engine  fly.engine.toml  pyproject.toml  rc_data_dump.py  rc_test.py  rc_transcript_probe.py  rc_ws_debug.py  requirements-engine.txt  requirements.txt  run_engine.py  run_local.py  run_monitor.py  vercel.json
api/: index.py
docs/: DEPLOYMENT.md  WSL_SETUP.md  openapi.yaml
scripts/: get_device_sip_info.py
softphone-bridge/: .env.example  Dockerfile  fly.toml  package-lock.json  package.json  read-sup-events.mjs
softphone-bridge/src/: config.ts  deepgram.ts  index.ts  liveness.ts  redis.test.ts  redis.ts  ringcentral-softphone.d.ts  server.test.ts  server.ts  supervisor.test.ts  supervisor.ts
src/: call_monitor.py  config.py  extraction_worker.py  extractor.py  hubspot_client.py  metrics_worker.py  rc_metrics.py  recording_transcriber.py  redis_store.py  scope_summarizer.py  sellometer.json  sellometer.py  sellometer_worker.py  sidecar_client.py  spoken.py
src/agreement_tool/: callrail.py  generator.py  models.py  routes.py
tests/: conftest.py  test_agreement_generator.py  test_agreement_routes.py  test_api.py  test_call_monitor.py  test_callrail_client.py  test_config.py  test_extraction_worker.py  test_extractor.py  test_hubspot_client.py  test_metrics_worker.py  test_rc_metrics.py  test_recording_transcriber.py  test_redis_store.py  test_run_engine.py  test_scope_summarizer.py  test_sellometer.py  test_sellometer_worker.py  test_session.py  test_sidecar_client.py  test_spoken.py
(+34 files in other folders)
