[project]
name = "sfw-call-bridge"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "upstash-redis>=1.1",
    "ringcentral>=0.9",
    "httpx>=0.28",
    "python-dotenv>=1.0",
    "websockets>=14.0",
    "tzdata>=2025.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "fakeredis>=2.26",
    "httpx",
    "respx>=0.22",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
